--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <h1> My First CI/CD DevOps Project Made By Anees ur Rehman </h1>
 
-<p>Built with Docker, Jenkins & Kubernetes</p>
+<p>Built with Docker, Jenkins & Kubernetes & Argocd</p>
 
 </body>
 </html>
