--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h1> My First CI/CD DevOps Project Made 0---------------------  </h1>
+<h1> My First CI/CD DevOps Project Made   </h1>
 
 <p>Built with Docker, Jenkins & Kubernetes & Argocd</p>
 
